kubernetes/archive/deploy/proxies/internal/ambiwled/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ambiwled
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
