kubernetes/archive/deploy/proxies/internal/ambiwled/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: ambiwled
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ambiwled.vandeneede.org`)
    services:
    - name: ambiwled
      port: 80
